2005-02-26  Chris Taylor  <chris@icculus.org>

	* ui/keypad.c, ui/ui.c: no unnecessarily including MS DOS
	headers

2005-02-25  Bradley Bell  <btb@icculus.org>

	* arch/dos/digi.c, arch/dos/digiallg.c, arch/dos/digimm.c,
	arch/linux/alsadigi, arch/win32/digi.c: rip out digiobj stuff, use
	d2src system for persistent sounds. Untested, of course.

	* ChangeLog-old: clean up old changelog a little

2005-02-24  Tim Massey  <tmassey@obscorp.com>

	* main/inferno.c: allow -notitles to work in shareware [and
	non-RELEASE] version too. (d1x r1.35)

2005-02-24  Peter Hawkins  <peterh@isa.net.au>

	* arch/linux/alsadigi.c: update to alsa 1.0 API. (d1x r1.3)

2005-02-24  Matthew Mueller  <donut@dakotacom.net>

	* arch/ogl/gr.c: restore gamma ramp on exit since some drivers
	don't do it automatically (eg, ati's fglrx linux driver) (d1x
	r1.41)

2005-02-24  Bradley Bell  <btb@icculus.org>

	* main/movie.c: change movie Warnings to con_printf, simplify
	other debug info.

2005-02-24  Chris Taylor  <chris@icculus.org>

	* 2d/pcx.c, arch/ogl/gr.c, main/config.c, main/inferno.c, 
	main/newdemo.c, include/physfsx.h, include/cfile.h, main/playsave.c, 
	main/state.c, misc/args.c: use PHYSFSX_openReadBuffered and 
	PHYSFSX_openWriteBuffered, where appropriate

	* main/gauges.c: draw behind the shield number properly with OpenGL

	* main/gauges.c: draw the bomb count in OpenGL, but not when a bomb
	is selected as a secondary weapon

	* main/titles.c: check properly whether there's a briefing

	* main/mission.c: recursively search directories in "missions" 
	for missions

2005-02-11  Bradley Bell  <btb@icculus.org>

	* debian/control: build-dep on libphysfs-dev

	* arch/ogl/gr.c: use GLint for arb_max_textures

	* arch/ogl/Makefile.am: added internal.h to dist

	* Makefile.am, arch/win32/Makefile.am: remove old files from dist

2005-01-25  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* arch/carbon/conf.h, arch/ogl/gr.c, include/loadgl.h: on Carbon,