@@ -3,6 +3,8 @@
 	* ui/keypad.c, ui/ui.c: no unnecessarily including MS DOS
 	headers
 
+	* ui/window.c: only disable the keyboard for MS DOS
+
 2005-02-25  Bradley Bell  <btb@icculus.org>
 
 	* arch/dos/digi.c, arch/dos/digiallg.c, arch/dos/digimm.c,
